fix: z-indexes

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -8,7 +8,7 @@
   top: 1.5rem;
   transform: translateX(-50%);
   width: 100%;
-  z-index: 2;
+  z-index: 3;
 
   &__menu__toggler {
     background: transparent;
@@ -34,7 +34,7 @@
     transform: translateX(-100%);
     width: 100dvw;
     will-change: transform, opacity;
-    z-index: 1;
+    z-index: 2;
 
     &.is-open {
       transform: translateX(0);
